Added Employee CRUD operations.

--- a/DapperApp/Views/Employees/Index.cshtml
+++ b/DapperApp/Views/Employees/Index.cshtml
@@ -41,7 +41,8 @@
             </td>
            
             <td>
-                <a asp-action="Edit" asp-route-id="@item.EmployeeId" class="btn btn-info">Edit</a> 
+                <a asp-action="Edit" asp-route-id="@item.EmployeeId" class="btn btn-info">Edit</a>
+                <a asp-action="Delete" asp-route-id="@item.EmployeeId" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
