--- a/DapperApp/Views/Employees/Index.cshtml
+++ b/DapperApp/Views/Employees/Index.cshtml
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CompanyId)
+                @Html.DisplayFor(modelItem => item.Company.Name)
             </td>
 
             <td>
